src/pages/color-gradient/_styles.module.scss
.body {
	width: 100%;
	max-height: 100%;
	overflow: hidden;
	height: 100%;

	> div:first-child {
		display: flex;
		justify-content: center;
		align-items: flex-start;
		max-height: inherit;
		overflow: hidden;
		height: inherit;

		@media (max-width: 720px) {
			flex-direction: column;
			align-items: center;
			justify-content: flex-start;
		}
	}
}

.body_control {
	min-width: 360px;
	max-width: 360px;
	display: flex;
	flex-direction: column;
	gap: 8px;
	padding: 0 8px 8px 8px;
	max-height: inherit;
	height: inherit;
	overflow: auto;

	@media (max-width: 720px) {
		padding: 8px;
		min-width: 100%;
		max-width: 100%;
		height: min-content;
	}

	> div {
		padding: 12px;
		border-radius: 8px;
		background-color: rgb(var(--g-color-surface));
		border: 1px solid rgba(var(--g-color-on-surface), var(--g-opacity3));

		:root[data-corner=sharp] & { border-radius: 0 }
		:root[data-corner=semi-round] & { border-radius: 4px }
		:root[data-corner=full-round] & { border-radius: 20px }
	}
}

.body_control_shape {
	display: grid;
	grid-template-columns: 1fr 1fr;
	gap: 8px;
}

.body_gradient_control {
	display: grid;
	grid-template-columns: 1fr;
	gap: 8px;
	justify-items: start;

	> h3 {
		margin-left: 12px;
	}
}

.body_gradient_control_actions {
	display: flex;
	width: 100%;
	justify-content: space-between;
	padding-top: 4px;
}

.body_gradient_control_gradient {
	display: flex;
	gap: 4px;
	width: 100%;

	> div:first-child {
		position: relative;
		flex: 1;
		display: flex;
		align-items: center;

		> div:not([data-gradient]) {
			position: absolute;
			bottom: 32px;

			> div {
				border: 2px solid rgb(var(--g-color-on-surface));
				width: 16px;
				height: 16px;
				position: relative;
				left: -8px;
				transition-duration: .2s;
				border-radius: 8px;

				:root[data-corner=sharp] & {border-radius: 0px}
				:root[data-corner=semi-round] & {border-radius: 4px}
				:root[data-corner=full-round] & {border-radius: 20px}

				&:is(:hover,[data-dragged]) {
					z-index: 5;
					cursor: e-resize;
					width: 32px;
					height: 32px;
					left: -16px;

					&::before {
						opacity: 1;
						transform: translate(-50%, 0px);
						transition-delay: .2s;
					}
				}

				&::after {
					content: '';
					width: 2px;
					background-color: rgb(var(--g-color-on-surface));
					height: 20px;
					position: absolute;
					top: calc(100% + 2px);
					left: calc(50% - 1px);
				}

				&::before {
					content: attr(data-length);
					position: absolute;
					left: 50%;
					transform: translate(-50%, 12px);
					bottom: calc(100% + 8px);
					align-items: center;
					border-radius: 4px;
					border: none;
					opacity: 0;
					box-shadow: var(--g-elevation1);
					display: flex;
					color: rgb(var(--g-color-surface));
					background-color: rgb(var(--g-color-on-surface));
					padding: 6px 8px;
					font-size: var(--g-font-size-s);
					font-weight: 500;
					outline: 1px solid rgba(var(--g-color-surface), var(--g-opacity2));
					outline-offset: -1px;
					overflow: hidden;
					pointer-events: none;
					width: fit-content;
					height: fit-content;
					white-space: nowrap;
					z-index: 99;
					transition-property: opacity, transform;
					transition-duration: .2s;
					transition-delay: 0s;
					transition-timing-function: var(--g-transition-spring-bounce);

					:root[data-corner=sharp] & { border-radius: 0 }
					:root[data-corner=full-round] & { border-radius: 14px }
				}
			}
		}

		> div[data-gradient] {
			height: 12px;
			width: 100%;
			border: 1px solid rgb(var(--g-color-on-surface));
		}
	}


	> div > :global(.c-btn) {
		&[data-expanded] :global(.c-icon) {
			rotate: 180deg;
		}

		& :global(.c-icon) {
			transition-duration: .2s;
		}
	}
}

.body_gradient_control_options {
	display: grid;
	grid-template-columns: 1fr;
	gap: 8px;
}

.body_gradient_control_options_2_grid {
	display: grid;
	grid-template-columns: 1fr 1fr;
	gap: 8px;
}

.body_gradient_control_stop {
	display: flex;
	gap: 4px;

	> div:first-child {
		display: flex;
		gap: inherit;
		flex: 1;

		> :global(.c-textfield){
			&:first-child {
				max-width: 96px;
			}

			&:last-child {
				flex: 1;
				max-width: 100%;
				width: 100%;
			}
		}
	}
}

.body_gradient_data_list {
	--minimum: 32px;
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(var(--minimum), 1fr));
	margin-bottom: 16px;

	:root[data-platform=mobile] & {
		--minimum: 40px;
	}

	&:empty {
		display: none;
	}

	> div {
		--size: 24px;
		max-width: var(--size);
		max-height: var(--size);
		min-width: var(--size);
		min-height: var(--size);
		border-radius: var(--c-btn-border-radius);
		transition-duration: .2s;

		:root[data-platform=mobile] & {
			--size: 28px;
		}
	}

	& [data-gradient] {
		width: 100%;
		height: 100%;
		border-radius: var(--c-btn-border-radius);
		transition-duration: .2s;
	}
}

.body_preview {
	flex: 1;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 0px 8px 8px 8px;
	max-height: inherit;
	height: inherit;
	overflow: auto;

	@media (max-width: 720px) {
		min-height: 280px;
		width: 100%;
	}

	> div {
		width: min(80vmin, 500px);

		@media (max-width: 720px) {
			height: 100%;
			width: auto;
		}
	}
}

